--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
-    "mongoose": "^7.5.0",
+    "mongoose": "^7.5.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1"
   }
 }
