--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/api"
+  "proxy": "https://traveler-api.up.railway.app/api"
 }
