--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,8 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all",
-      "--omit=dev"
+      "not op_mini all"
+      
     ],
     "development": [
       "last 1 chrome version",
