--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,11 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.3",
     "react-scripts": "5.0.1",
-    "serve": "^14.2.1",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve build -s -n -L -p $PORT",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,7 +37,6 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
-      
     ],
     "development": [
       "last 1 chrome version",
