--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "frontend",
+  "name": "create-react-app-starter",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "@types/mapbox-gl": "^2.7.13",
     "axios": "^1.5.0",
     "mapbox-gl": "^2.15.0",
@@ -18,19 +14,15 @@
     "react-map-gl": "^7.1.3",
     "react-scripts": "5.0.1",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "dev": "react-scripts start",
-    "start": "serve build -s -n -L -p $PORT",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -44,6 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://traveler-api.up.railway.app/api"
+  }
 }
