--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/mapbox-gl": "^2.7.13",
     "axios": "^1.5.0",
     "mapbox-gl": "^2.15.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.3",
